--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,71 +1,35 @@
 {
-  "name": "@gear-js/nft",
-  "version": "0.1.2",
-  "private": true,
+  "name": "my-near-app",
+  "version": "1.0.0",
+  "license": "(MIT AND Apache-2.0)",
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test"
-  },
-  "browserslist": {
-    "production": [
-      "chrome >= 67",
-      "edge >= 79",
-      "firefox >= 68",
-      "opera >= 54",
-      "safari >= 14"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "dependencies": {
-    "@gear-js/api": "0.32.3",
-    "@gear-js/react-hooks": "0.5.24",
-    "@gear-js/ui": "0.4.0",
-    "@polkadot/api": "10.9.1",
-    "@polkadot/extension-dapp": "0.46.5",
-    "@polkadot/react-identicon": "3.1.4",
-    "@polkadot/types": "10.9.1",
-    "@polkadot/util": "12.3.2",
-    "@polkadot/wasm-crypto": "7.2.1",
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.2.0",
-    "@testing-library/user-event": "13.5.0",
-    "@types/jest": "27.5.1",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.37",
-    "@types/react-dom": "18.0.11",
-    "assert": "2.0.0",
-    "buffer": "6.0.3",
-    "clsx": "1.2.1",
-    "ipfs-http-client": "57.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "7.43.5",
-    "react-router-dom": "6.10.0",
-    "react-scripts": "5.0.1",
-    "react-transition-group": "4.4.5",
-    "sass": "1.62.0",
-    "typescript": "4.9.5",
-    "web-vitals": "3.3.1"
+    "start": "./start.sh",
+    "start:headless": "env-cmd -f '../contract/neardev/dev-account.env' parcel index.html",
+    "build": "parcel build index.html --public-url ./",
+    "test:e2e": "npm run start:headless & npm run cypress:run",
+    "cypress:run": "cypress run --config-file cypress/cypres.config.js",
+    "cypress:open": "cypress open --browser chromium --config-file cypress/cypres.config.js"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.25.0",
-    "@typescript-eslint/parser": "5.25.0",
-    "eslint": "8.16.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "react-app-rewired": "2.2.1"
+    "cypress": "^11.2.0",
+    "env-cmd": "^10.1.0",
+    "events": "^3.3.0",
+    "nodemon": "^2.0.16",
+    "parcel": "^2.7.0",
+    "process": "^0.11.10"
   },
-  "lint-staged": {
-    "./**/*.{js,css,ts,tsx}": "eslint --fix"
+  "dependencies": {
+    "@near-wallet-selector/core": "^7.0.0",
+    "@near-wallet-selector/ledger": "^7.0.0",
+    "@near-wallet-selector/math-wallet": "^7.0.0",
+    "@near-wallet-selector/meteor-wallet": "^7.0.0",
+    "@near-wallet-selector/modal-ui": "^7.0.0",
+    "@near-wallet-selector/my-near-wallet": "^7.0.0",
+    "@near-wallet-selector/near-wallet": "^7.0.0",
+    "@near-wallet-selector/nightly": "^7.0.0",
+    "@near-wallet-selector/nightly-connect": "^7.0.0",
+    "@near-wallet-selector/sender": "^7.0.0",
+    "@near-wallet-selector/wallet-connect": "^7.0.0",
+    "near-api-js": "^0.44.2"
   }
 }
